@@ -119,11 +119,20 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
+
                 <configuration>
                     <source>21</source>
                     <target>21</target>
                 </configuration>
-            </plugin>
+                </plugin>
+
+            <!--plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin-->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
@@ -194,6 +203,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>3.0.0</version>
+
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -202,13 +212,51 @@
                         </goals>
                         <configuration>
                             <target>
-                                <exec executable="jlink" failonerror="true">
+                                <exec executable="${java.home}/bin/jlink" osfamily="mac" failonerror="true">
                                     <arg value="--module-path"/>
                                     <arg value="${java.home}/jmods:${project.build.directory}/dependency:${project.build.directory}/classes"/>
+
+                                    <arg value="--add-modules"/>
+                                    <arg value="gioco.angolo,java.base,java.net.http,java.scripting,java.sql,jdk.jfr,jdk.jsobject,jdk.unsupported,jdk.unsupported.desktop,jdk.xml.dom,org.controlsfx.controls,com.dlsc.formsfx,net.synedra.validatorfx,org.kordamp.ikonli.javafx,org.kordamp.bootstrapfx.core,eu.hansolo.tilesfx,com.almasb.fxgl.all"/>
+
+                                    <arg value="--output"/>
+                                    <arg value="${project.build.directory}/jre"/>
+
+                                    <arg value="--compress=2"/>
+                                    <arg value="--no-header-files"/>
+                                    <arg value="--no-man-pages"/>
+                                </exec>
+                                <exec executable="jpackage" osfamily="mac" failonerror="true">
+                                    <arg value="--name"/>
+                                    <arg value="AngleGame"/>
+
+                                    <arg value="--input"/>
+                                    <arg value="/Users/gatti/Documents/Workspace/Angolo/target"/>
+
+                                    <arg value="--main-jar"/>
+                                    <arg value="Angolo-1.0-SNAPSHOT.jar"/>
+
+                                    <arg value="--main-class"/>
+                                    <arg value="gioco.angolo.Main"/>
+
+                                    <arg value="--runtime-image"/>
+                                    <arg value="/Users/gatti/Documents/Workspace/Angolo/target/jre"/>
+
+                                    <arg value="--type"/>
+                                    <arg value="dmg"/>
+
+                                    <arg value="--dest"/>
+                                    <arg value="/Users/gatti/Documents/Workspace/Angolo/target"/>
+                                </exec>
+
+
+                                <exec executable="jlink" osfamily="windows" failonerror="true">
+                                    <arg value="--module-path"/>
+                                    <arg value="${java.home}\jmods;${project.build.directory}\dependency;${project.build.directory}\classes"/>
                                     <arg value="--add-modules"/>
                                     <arg value="gioco.angolo,java.base,java.net.http,java.scripting,java.sql,jdk.jfr,jdk.jsobject,jdk.unsupported,jdk.unsupported.desktop,jdk.xml.dom,org.controlsfx.controls,com.dlsc.formsfx,net.synedra.validatorfx,org.kordamp.ikonli.javafx,org.kordamp.bootstrapfx.core,eu.hansolo.tilesfx,com.almasb.fxgl.all"/>
                                     <arg value="--output"/>
-                                    <arg value="${project.build.directory}/myruntime"/>
+                                    <arg value="${project.build.directory}\jre"/>
                                     <arg value="--compress=2"/>
                                     <arg value="--no-header-files"/>
                                     <arg value="--no-man-pages"/>
@@ -217,7 +265,9 @@
                         </configuration>
                     </execution>
                 </executions>
+
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -235,6 +285,56 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>1.6.3</version>
+
+                <configuration>
+                    <name>AngleGame</name>
+                    <appVersion>1.0</appVersion>
+                    <description>My game app</description>
+                    <vendor>My Company</vendor>
+                    <copyright>2022 My Company</copyright>
+                    <licenseFile>LICENSE.txt</licenseFile>
+                    <runtimeImage>${project.build.directory}/myruntime</runtimeImage>
+                    <mainClass>gioco.angolo.Main</mainClass>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <id>mac</id>
+                        <phase>package</phase>
+                        <configuration>
+                            <type>dmg</type>
+                            <icon>src/main/resources/icon.icns</icon>
+                            <dest>${project.build.directory}/dmg</dest>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>windows</id>
+                        <configuration>
+                            <type>exe</type>
+                            <icon>src/main/resources/icon.ico</icon>
+                            <dest>${project.build.directory}</dest>
+                            <winConsole>true</winConsole>
+                            <winDirChooser>true</winDirChooser>
+                            <winShortcut>true</winShortcut>
+                            <winMenu>true</winMenu>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>linux</id>
+                        <configuration>
+                            <type>deb</type>
+                            <icon>src/main/resources/icon.png</icon>
+                            <dest>${project.build.directory}</dest>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin-->
         </plugins>
     </build>
 </project>
